--- a/backend/package.json
+++ b/backend/package.json
@@ -23,15 +23,16 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-	"@nestjs-modules/mailer": "^1.10.3",
+    "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
-	"@nestjs/jwt": "^10.2.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-	"@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/serve-static": "^4.0.1",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/websockets": "^10.3.8",
     "@prisma/client": "^5.20.0",
     "argon2": "^0.31.2",
@@ -44,7 +45,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "serve-static": "^1.15.0",
-    "uuid": "^9.0.1"	
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -62,7 +64,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-	"prisma": "^5.10.2",
+    "prisma": "^5.10.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
