--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
