db: added migration files and included tracking

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 # Logs and databases #
 ######################
 *.log
-*.sql
+#*.sql (we need migration files)
 *.sqlite
 
 # OS generated files #
