--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/turf": "^7.2.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "mui-color-input": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
