--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.10.3",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
