feat: roles, permissions stuff, added farm members module, implemented voice prompt refined with AI task description

--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/x-charts": "^7.27.1",
     "@react-google-maps/api": "^2.20.6",
     "@turf/turf": "^7.2.0",
     "@types/node": "20.3.1",
@@ -17,6 +20,7 @@
     "@types/react-dom": "18.2.5",
     "axios": "^1.7.9",
     "chart.js": "4.2.1",
+    "framer-motion": "^12.5.0",
     "leaflet": "^1.9.4",
     "next": "13.4.8",
     "primeflex": "^3.3.1",
