feat: added general farm AI insight in dashboard, created crop health page, enabled equipment edit functionality in task view page

--- a/new-frontend/.env
+++ b/new-frontend/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3333
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyChivUghBjEgpN6blKH6n5r9gTZ267dMf8
+NEXT_PUBLIC_PLANT_ID_API_KEY=RpFnUXVLuYPQTVmux5nwhOope8FemC1rl7gdipDNWjmpuq0Esq
