--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.3",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
@@ -41,6 +41,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^3.4.0",
+    "joi": "^17.13.3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "passport": "^0.7.0",
