--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.5.0",
     "leaflet": "^1.9.4",
     "next": "13.4.8",
+    "next-intl": "^4.1.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "10.2.1",
