more unit tests and various fixes

--- a/backend/package.json
+++ b/backend/package.json
@@ -87,7 +87,7 @@
     },
     "collectCoverageFrom": ["**/*.(t|j)s"],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node",
+    "coverageReporters": ["text", "lcov"],
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/$1"
     }
