--- a/backend/package.json
+++ b/backend/package.json
@@ -85,8 +85,12 @@
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
-    "coverageDirectory": "../coverage",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.service.ts",
+      "**/*.controller.ts"
+    ],    
+    "coverageDirectory": "../coverage-controllers-services",
     "coverageReporters": ["text", "lcov"],
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/$1"
