--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+	"test:integration": "jest --config ./test/jest-integration.json",
+	"test:integration:watch": "jest --config ./test/jest-integration.json --watch",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "prisma": {
