--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-	"test:integration": "jest --config ./test/jest-integration.json",
-	"test:integration:watch": "jest --config ./test/jest-integration.json --watch",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:integration": "jest --config ./test/jest-integration.json",
+    "test:integration:watch": "jest --config ./test/jest-integration.json --watch",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:setup-db": "ts-node scripts/setup-test-db.ts",
+    "test:integration:ci": "npm run test:setup-db && npm run test:integration"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
