--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "test:integration": "jest --config ./test/jest-integration.json",
     "test:integration:watch": "jest --config ./test/jest-integration.json --watch",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:setup-db": "ts-node scripts/setup-test-db.ts",
+    "test:setup-db": "ts-node test/integration/setup-test-db.ts",
     "test:integration:ci": "npm run test:setup-db && npm run test:integration"
   },
   "prisma": {
