--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -34,9 +34,12 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^10.0.3",
+    "cypress": "^14.3.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "prettier": "^2.8.8",
-    "sass": "^1.63.4"
+    "sass": "^1.63.4",
+    "start-server-and-test": "^2.0.11"
   }
 }
