--- a/new-frontend/tsconfig.json
+++ b/new-frontend/tsconfig.json
@@ -18,6 +18,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["cypress", "node"],
     "plugins": [
       {
         "name": "next"
@@ -33,7 +34,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "**/*.ts", "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
